Resolves: tdf#164124 Do not trap incomplete date 2021-6/1 as fraction

In fact do not accept anything else than blanks after integer
portion for a fraction.

Change-Id: I29746bb7cd78ecc6a7810e8841bee748589a36e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177899
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 6926c820ceea1a1337a97b0afda95b072027a6ff)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177959
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
(cherry picked from commit da87646c4f407532b41e288f3ddac9f09e42be47)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178018
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>